--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/srikanth-a-a1033522b/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://www.instagram.com/srikaanthhreddy/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                    <a href="https://github.com/srikaanthh" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
                 <div class="home__img">
