--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/srikanth-a-a1033522b/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                     <a href="https://www.instagram.com/srikaanthhreddy/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                     <a href="https://www.instagram.com/srikaanthhreddy/" class="home__social-icon"><i class='bx bxl-instagram' ></i></a>
                     <a href="https://github.com/srikaanthh" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
