--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">BIO</h2>
-                        <p class="about__text">I am a pre final year student at R.M.D. ENGINEERING COLLEGE , Chennai, studying B.E in Computer Science and Engineering. I have drawn interest towards Data Science and Analysis, blockchain and Business Analytics. I have gained experience in team collaboration, task management, Creative Thinking. I am a person who always stays out of the books and initiate innovative solutions who is always open to learning and adapting.</p>           
+                        <p class="about__text">He’s a pre-final year student at R.M.D. Engineering College in Chennai, studying B.E. in Computer Science and Engineering, He have developed a keen interest in Data Science and Analysis, blockchain, and Business Analytics. He gained experience in team collaboration, task management, and creative thinking. He is a type of person who always stays out of the books and initiate innovative solutions and who is always open to learn and adapt. He loves to play Tennis in his free time and also hitting the goal post like this favourite player does.</p>
                     </div>                                   
                 </div>
             </section>
