--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Portfolio website complete</title>
+        <title>srikanthakkaru</title>
     </head>
     <body>
         <!--===== HEADER =====-->
